--- a/hangman.html
+++ b/hangman.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="hangman.css">
 </head>
 <body>
+<h1>Hangman!</h1>
 <div class="game-container">
   <canvas id="gallows">
   </canvas>
