some jQuery practice and tweaking in the non-functions Hangman

--- a/hangman-functions.html
+++ b/hangman-functions.html
@@ -19,7 +19,7 @@
   <div id="game-progress"></div><br>
 </div>
   <script>
-  $("h1").fadeOut(1000).fadeIn(2000);
+  $("h1").fadeIn(6000).fadeTo(5000, 0.75);
   var numberOfGuesses;
 
 function pickWord() {
