--- a/hangman.html
+++ b/hangman.html
@@ -4,22 +4,35 @@
   <meta charset="UTF-8">
   <title>Hangman Game</title>
   <link rel="stylesheet" href="hangman.css">
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 <body>
-<h1>Hangman!</h1>
+<h1 id="heading">Hangman!</h1>
 <div class="game-container">
   <canvas id="gallows">
   </canvas>
   <input id="letter-input" type="text" placeholder="Guess your letter...">
-  <!-- <input type="submit" value="Submit" onclick="gameLoop();"> <br /> -->
+  <input type="submit" value="Submit" onclick="gameLoop();"><br>
   <span id="answer-space"></span><br>
   <span id="guess-space"></span><br>
   <span id="letter-space"></span><br>
   <span id="guessed"></span><br>
   <div id="game-progress"></div><br>
 </div>
-
   <script>
+// setInterval Practice
+var leftOffset = 0;
+
+function moveHeading() {
+  $("#heading").offset({ left: leftOffset });
+  leftOffset++;
+  if (leftOffset > 200) {
+    leftOffset = 0;
+  }
+};
+
+setInterval(moveHeading, 30);
+
 // An array of words
   var words = [
     "javascript",
@@ -48,22 +61,27 @@ function gameLoop() {
     var guess = document.getElementById("letter-input").value;
   if ((remainingLetters > 0) && (remainingGuesses > 0)) {
     //Show player progress
+     document.getElementById("game-progress").innerHTML = " "
     document.getElementById("answer-space").innerHTML = answerArray.join(" ");
     document.getElementById("guess-space").innerHTML = "Remaining Guesses: " + remainingGuesses;
     document.getElementById("letter-space").innerHTML = "Remaining Letters: " + remainingLetters;
-    guessedLetters.push(guess);
-    document.getElementById("guessed").innerHTML = guessedLetters.join(" ");
+
 
     if (guess == null) {
       //Remind player and leave game-state unchanged
     document.getElementById("game-progress").innerHTML = "Please guess something!"
+    return;
     } else if (guess.length !== 1) {
       //Remind player and leave game-state unchanged
     document.getElementById("game-progress").innerHTML = "Please input a single letter..."
+    return;
     }
     else {
-      remainingGuesses--;
-      if (guessedLetters.indexOf(guess) !== -1) {
+      if (answerArray.indexOf(guess) === -1 ) {
+        remainingGuesses--;
+        guessedLetters.push(guess);
+        document.getElementById("guessed").innerHTML = guessedLetters.join(" ");
+        if (guessedLetters.indexOf(guess) !== -1) {
         //Update game state with the guess...
         for (var j=0; j < word.length; j++) {
             if (word[j] === guess) {
@@ -74,6 +92,11 @@ function gameLoop() {
         }
       }
     }
+    else {
+      document.getElementById("game-progress").innerHTML = "You already guessed that letter!"
+      return;
+    }
+  }
   //End Game if Guesses run out
   if (remainingGuesses == 0) {
     document.getElementById("game-progress").innerHTML = "You are all out of guesses! GAME OVER!! The answer was " + word;
@@ -93,8 +116,5 @@ document.getElementById("letter-input").keyup(function (e) {
     }
   });
   </script>
-
-
-
 </body>
 </html>
